k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: db-pvc-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - name:  db-pvc-storage
              mountPath: /var/lib/postgres/data
              subPath: postgres
          end:
            - name: POSTGRES_USER
              value: postgres
            # Should use from secrets here
            - name: POSTGRES_PASSWORD
              value: postgres
